Edited domain for email and bloglinks

--- a/locale/de.json
+++ b/locale/de.json
@@ -59,7 +59,7 @@
 	"components.molecules.AddContentModal": "Hinzufügen zu",
 	"components.molecules.AccountCard.action.edit": "ändern",
 	"components.molecules.ContentCard.report.body": "Melden des Inhaltes mit der ID",
-	"components.molecules.ContentCard.report.email": "inhalte@schul-cloud.org",
+	"components.molecules.ContentCard.report.email": "inhalte@hpi-schul-cloud.de",
 	"components.molecules.ContentCard.report.subject": "Liebes Team, hiermit möchte ich den im Betreff genannten Inhalt melden, da: [hier bitte Ihre Gründe]",
 	"components.molecules.ContentCardMenu.action.copy": "Kopieren nach …",
 	"components.molecules.ContentCardMenu.action.delete": "Löschen",
@@ -83,7 +83,7 @@
 	"components.organisms.AutoLogoutWarning.warning": "Achtung: Du wirst in <span style='color: var(--color-danger)'> {remainingTime} </span> automatisch ausgeloggt. Verlängere jetzt deine Sitzung auf zwei Stunden.",
 	"components.organisms.AutoLogoutWarning.warning.remainingTime": "weniger als einer Minute | einer Minute | {remainingTime} Minuten",
 	"components.organisms.ContentCard.report.body": "Melden des Inhaltes mit der ID",
-	"components.organisms.ContentCard.report.email": "inhalte@schul-cloud.org",
+	"components.organisms.ContentCard.report.email": "inhalte@hpi-schul-cloud.de",
 	"components.organisms.ContentCard.report.subject": "Liebes Team, hiermit möchte ich den im Betreff genannten Inhalt melden, da: [hier bitte Ihre Gründe]",
 	"components.organisms.DataFilter.add": "Filter hinzufügen",
 	"components.organisms.DatasourceRunWebuntis.discarded": "Verworfen",
@@ -306,14 +306,14 @@
 	"pages.loginInstances.open_hpi_link": "https://open.schul-cloud.org/login",
 	"pages.loginInstances.thr_link": "https://schulcloud-thueringen.de",
 	"pages.loginInstances.mintec_link": "https://schul-cloud.org/login",
-	"pages.mint-ec.article.footer.anbieter": "Inhalteanbieter: inhalte@schul-cloud.org",
+	"pages.mint-ec.article.footer.anbieter": "Inhalteanbieter: inhalte@hpi-schul-cloud.de",
 	"pages.mint-ec.article.footer.datasecurity": "Datenschutz und Urheberrecht",
 	"pages.mint-ec.article.footer.datenschutz": "Datenschutzerklärung HPI",
-	"pages.mint-ec.article.footer.datenschutz-mail": "Datenschutz: datenschutz@schul-cloud.org",
+	"pages.mint-ec.article.footer.datenschutz-mail": "Datenschutz: datenschutz@hpi-schul-cloud.de",
 	"pages.mint-ec.article.footer.datenschutzerklärung": "Datenschutzerklärung Muster Schulen",
 	"pages.mint-ec.article.footer.engagieren": "Mich im Projekt engagieren",
 	"pages.mint-ec.article.footer.impressum": "Impressum",
-	"pages.mint-ec.article.footer.info-mail": "Allgemein: info@schul-cloud.org",
+	"pages.mint-ec.article.footer.info-mail": "Allgemein: info@hpi-schul-cloud.de",
 	"pages.mint-ec.article.footer.kollegium-informieren": "Meine Kollegium informieren",
 	"pages.mint-ec.article.footer.newsletter": "Newsletter abonnieren",
 	"pages.mint-ec.article.footer.nutzungsordnung": "Nutzungsordnung",
