--- a/locale/en.json
+++ b/locale/en.json
@@ -24,7 +24,7 @@
 	"components.legacy.footer.partner": "Partner",
 	"components.legacy.footer.terms": "Terms of use",
 	"components.molecules.ContentCard.report.body": "",
-	"components.molecules.ContentCard.report.email": "inhalte@schul-cloud.org",
+	"components.molecules.ContentCard.report.email": "inhalte@hpi-schul-cloud.de",
 	"components.molecules.ContentCard.report.subject": "",
 	"components.molecules.ContentCardMenu.action.copy": "Copy to...",
 	"components.molecules.ContentCardMenu.action.delete": "Delete",
@@ -35,7 +35,7 @@
 	"components.molecules.MintEcFooter.chapters": "Chapter overview",
 	"components.molecules.TextEditor.noLocalFiles": "",
 	"components.organisms.ContentCard.report.body": "",
-	"components.organisms.ContentCard.report.email": "inhalte@schul-cloud.org",
+	"components.organisms.ContentCard.report.email": "inhalte@hpi-schul-cloud.de",
 	"components.organisms.ContentCard.report.subject": "",
 	"components.organisms.FormDatasourcesLogin.input.name.placeholder": "Name of the data source",
 	"components.organisms.FormNews.cancel.confirm.cancel": "",
