--- a/locale/en.json
+++ b/locale/en.json
@@ -88,6 +88,8 @@
 	"pages.administration.datasources.new.short_title": "",
 	"pages.administration.datasources.new.title": "",
 	"pages.administration.printQr.error": "The registration links could not be generated",
+	"pages.administration.teachers.index.searchbar.placeholder": "Search",
+	"pages.administration.students.index.searchbar.placeholder": "Search",
 	"pages.administration.index.title": "Administration",
 	"pages.content.init_state.img_alt": "Initial state Image",
 	"pages.content.init_state.message": "",
