SC-5988 language switcher in nuxt. You can find it on user account page

--- a/locale/en.json
+++ b/locale/en.json
@@ -72,6 +72,13 @@
 	"layouts.loggedoutFullWidth.join": "",
 	"layouts.loggedoutFullWidth.project": "",
 	"layouts.loggedoutFullWidth.steps": "",
+	"pages.account.index.title": "Account",
+	"pages.account.index.user.data": "Current User data",
+	"pages.account.index.user.email": "Current E-Mail Address",
+	"pages.account.index.user.password": "Current Password",
+	"pages.account.index.user.teams": "Team Settings",
+	"pages.account.index.user.thirdPartyProviders": "Third-Party-Logins",
+	"pages.account.name.edit.btn": "Change User Data",
 	"pages.administraion.datasources.index.error": "Last Import failed: {relativeDate}",
 	"pages.administraion.datasources.index.pending": "In progress",
 	"pages.administraion.datasources.index.success": "Last Import: {relativeDate}",
