SC-5988 update user language in the database

--- a/locale/de.json
+++ b/locale/de.json
@@ -179,7 +179,11 @@
 	"pages.account.name.edit.title": "Name ändern",
 	"pages.account.password.edit.confirmation": "Dein Passwort wurde erfolgreich geändert",
 	"pages.account.password.edit.password.info": "Mindestens 8 Zeichen mit Groß- und Kleinschreibung, davon jeweils mindestens eine Zahl und ein Sonderzeichen. Erlaubte Sonderzeichen sind: !§$%&/()=?;:,.#+*~",
+	"pages.account.index.user.locale": "Spracheinstellungen",
 	"pages.account.password.edit.title": "Passwort ändern",
+	"pages.account.locale.edit.title": "Sprache ändern",
+	"pages.account.locale.edit.btn": "Sprache ändern",
+	"pages.account.locale.edit.confirmation": "Deine Sprache wurde erfolgreich geändert",
 	"pages.activation._activationCode.index.error.title": "Deine Daten konnten nicht geändert werden",
 	"pages.activation._activationCode.index.error.description": "Deine Änderungen konnten leider nicht durchgeführt werden, da der Link ungültig oder abgelaufen ist. Bitte versuche es erneut.",
 	"pages.activation._activationCode.index.success.email": "Deine E-Mail-Adresse wurde erfolgreich geändert",
