--- a/locale/en.json
+++ b/locale/en.json
@@ -1,8 +1,8 @@
 {
-	"common.actions.cancel": "",
-	"common.actions.discard": "",
-	"common.actions.remove": "",
-	"common.actions.save": "",
+	"common.actions.cancel": "Cancel",
+	"common.actions.discard": "Discard",
+	"common.actions.remove": "Remove",
+	"common.actions.save": "Save",
 	"common.actions.scrollToTop": "Scroll up",
 	"common.labels.consent": "Consent",
 	"common.labels.createdAt": "Created At",
@@ -79,6 +79,10 @@
 	"pages.account.index.user.teams": "Team Settings",
 	"pages.account.index.user.thirdPartyProviders": "Third-Party-Logins",
 	"pages.account.name.edit.btn": "Change User Data",
+	"pages.account.index.user.locale": "Language Settings",
+	"pages.account.locale.edit.title": "Change Language",
+	"pages.account.locale.edit.btn": "Change Language",
+	"pages.account.locale.edit.confirmation": "Your language was successfully changed",
 	"pages.administraion.datasources.index.error": "Last Import failed: {relativeDate}",
 	"pages.administraion.datasources.index.pending": "In progress",
 	"pages.administraion.datasources.index.success": "Last Import: {relativeDate}",
