--- a/locale/de.json
+++ b/locale/de.json
@@ -388,9 +388,5 @@
 	"utils.adminFilter.placeholder.complete.lastname": "Nach vollständigem Nachnamen filtern...",
 	"utils.adminFilter.placeholder.complete.name": "Nach vollständigem Vornamen filtern...",
 	"utils.adminFilter.placeholder.date.from": "Erstellt zwischen 02.02.2020",
-	"utils.adminFilter.placeholder.date.until": "... und 03.03.2020",
-	"utils.adminFilter.teacher.consent.label.missing": "Keine Einverständniserklärung vorhanden",
-	"utils.adminFilter.teacher.consent.label.ok": "Einverständniserklärung vorhanden",
-	"utils.adminFilter.teacher.consent.ok": "vorhanden",
-	"utils.adminFilter.teacher.consent.title": "Einverständniserklärung"
+	"utils.adminFilter.placeholder.date.until": "... und 03.03.2020"
 }
