--- a/locale/en.json
+++ b/locale/en.json
@@ -372,7 +372,7 @@
 	"pages.news.new.title": "Create News",
 	"pages.news.title": "News",
 	"pages.termsofuse.title": "",
-	"storybook.lang": "I'm in German now!",
+	"storybook.lang": "I'm in English now!",
 	"utils.adminFilter.class.title": "Class(es)",
 	"utils.adminFilter.consent": "Consent form",
 	"utils.adminFilter.consent.label.missing": "No consent forms available",
