--- a/locale/de.json
+++ b/locale/de.json
@@ -18,8 +18,8 @@
 	"common.labels.email": "E-Mail",
 	"common.labels.firstName": "Vorname",
 	"common.labels.firstName.new": "Neuer Vorname",
-	"common.labels.fullName": "Vorname & Nachname",
 	"common.labels.lastName": "Nachname",
+	"common.labels.fullName": "Vorname & Nachname",
 	"common.labels.lastName.new": "Neuer Nachname",
 	"common.labels.login": "Login",
 	"common.labels.name": "Name",
@@ -46,6 +46,7 @@
 	"common.placeholder.repeat.email": "E-Mail-Adresse wiederholen",
 	"common.words.and": "und",
 	"componente.molecules.CoursesGrid.emptystate": "Aktuell gibt es hier noch keine Kurse.",
+	"components.legacy.MenuQrCode.qrHintText": "Lotse mit dem QR-Code andere Nutzer:innen auf diese Seite",
 	"components.legacy.footer.about": "Über das Projekt",
 	"components.legacy.footer.contact": "Kontakt",
 	"components.legacy.footer.contribute": "Mitmachen",
@@ -58,13 +59,8 @@
 	"components.legacy.footer.team": "Team",
 	"components.legacy.footer.terms": "Nutzungsordnung",
 	"components.legacy.footer.termsofuse": "Nutzungsordnung und Datenschutzerklärung",
-	"components.legacy.MenuQrCode.qrHintText": "Lotse mit dem QR-Code andere Nutzer:innen auf diese Seite",
 	"components.molecules.AccountCard.action.edit": "ändern",
 	"components.molecules.AddContentModal": "Hinzufügen zu",
-	"components.molecules.adminfooterlegend.title": "Legende",
-	"components.molecules.admintablelegend.externalSync": "Einige oder alle Nutzer:innendaten deiner Schule werden aus einer externen Quelle (LDAP, IDM, Schulportal o.ä.) synchronisiert. Die Bearbeitung dieser Nutzer:innen-Stammdaten ist deshalb nur im Quellsystem möglich, nicht in der Schul-Cloud. Das Anlegen neuer Schüler:innen oder Lehrkräfte ist ebenfalls nur im Quellsystem möglich. Finde weitere Informationen im",
-	"components.molecules.admintablelegend.help": "Hilfebereich",
-	"components.molecules.admintablelegend.hint": "Mit allen Änderungen und Einstellungen im Verwaltungsbereich bestätigen Sie, dass Sie weisungsberechtigter Schul-Administrator sind und befugt sind, Anpassungen an der Schule in der HPI Schul-Cloud vorzunehmen. Ihr Klick gilt insofern als Weisung der Schule gegenüber dem HPI.",
 	"components.molecules.ContentCard.report.body": "Melden des Inhaltes mit der ID",
 	"components.molecules.ContentCard.report.email": "inhalte@hpi-schul-cloud.de",
 	"components.molecules.ContentCard.report.subject": "Liebes Team, hiermit möchte ich den im Betreff genannten Inhalt melden, da: [hier bitte Ihre Gründe]",
@@ -77,6 +73,10 @@
 	"components.molecules.EdusharingFooter.text": "powered by",
 	"components.molecules.MintEcFooter.chapters": "Kapitelübersicht",
 	"components.molecules.TextEditor.noLocalFiles": "Lokale Dateien werden aktuell nicht unterstützt.",
+	"components.molecules.adminfooterlegend.title": "Legende",
+	"components.molecules.admintablelegend.externalSync": "Einige oder alle Nutzer:innendaten deiner Schule werden aus einer externen Quelle (LDAP, IDM, Schulportal o.ä.) synchronisiert. Die Bearbeitung dieser Nutzer:innen-Stammdaten ist deshalb nur im Quellsystem möglich, nicht in der Schul-Cloud. Das Anlegen neuer Schüler:innen oder Lehrkräfte ist ebenfalls nur im Quellsystem möglich. Finde weitere Informationen im",
+	"components.molecules.admintablelegend.help": "Hilfebereich",
+	"components.molecules.admintablelegend.hint": "Mit allen Änderungen und Einstellungen im Verwaltungsbereich bestätigen Sie, dass Sie weisungsberechtigter Schul-Administrator sind und befugt sind, Anpassungen an der Schule in der HPI Schul-Cloud vorzunehmen. Ihr Klick gilt insofern als Weisung der Schule gegenüber dem HPI.",
 	"components.organisms.AutoLogoutWarning.confirm": "Sitzung verlängern",
 	"components.organisms.AutoLogoutWarning.error": "Uups… das hätte nicht passieren dürfen! Deine Sitzung konnte nicht verlängert werden. Bitte versuche es gleich noch einmal.",
 	"components.organisms.AutoLogoutWarning.error.401": "Deine Sitzung ist bereits abgelaufen. Bitte melde dich erneut an.",
@@ -154,7 +154,7 @@
 	"layouts.loggedoutFullWidth.blog": "Blog",
 	"layouts.loggedoutFullWidth.faq": "FAQ",
 	"layouts.loggedoutFullWidth.join": "Mitmachen",
-	"layouts.loggedoutFullWidth.project": "Projekt",
+	"layouts.loggedoutFullWidth.project": "Über das Projekt",
 	"layouts.loggedoutFullWidth.steps": "Erste Schritte",
 	"mixins.typeMeta.types.default": "Inhalt",
 	"mixins.typeMeta.types.image": "Bild",
@@ -214,18 +214,16 @@
 	"pages.administration.datasources.index.remove.confirm.btnText": "Datenquelle entfernen",
 	"pages.administration.datasources.index.remove.confirm.message": "Möchtest du die Datenquelle \"{name}\" wirklich von der HPI Schul-Cloud trennen?",
 	"pages.administration.datasources.index.remove.error": "Fehler beim Entfernen der Datenquellen \"{name}\"",
-	"pages.administration.datasources.index.remove.success": "Datenquellen \"{name}\" wurde entfernt",
+	"pages.administration.datasources.index.remove.success": "Die Datenquelle \"{name}\" wurde entfernt.",
 	"pages.administration.datasources.index.title": "Datenquellen",
 	"pages.administration.datasources.index.trigger.error": "Datenimport fehlgeschlagen.",
-	"pages.administration.datasources.login.heading": "",
-	"pages.administration.datasources.login.text": "",
 	"pages.administration.datasources.new.add": "Datenquelle hinzufügen",
-	"pages.administration.datasources.new.provider.addedDatasources": "Bereits hinzugefügt ({x})",
 	"pages.administration.datasources.new.provider.LDAP.name": "LDAP",
 	"pages.administration.datasources.new.provider.RSS.name": "RSS",
 	"pages.administration.datasources.new.provider.WebUntis.name": "WebUntis",
+	"pages.administration.datasources.new.provider.addedDatasources": "Bereits hinzugefügt ({number})",
 	"pages.administration.datasources.new.short_title": "Hinzufügen",
-	"pages.administration.datasources.new.title": "Datenquelle hinzufügen",
+	"pages.administration.datasources.new.title": "Datenquellen hinzufügen",
 	"pages.administration.datasources.webuntis._id.edit.title": "Zugangsdaten",
 	"pages.administration.datasources.webuntis.new.heading": "Gib hier deine Zugangsdaten ein",
 	"pages.administration.datasources.webuntis.new.text": "Bitte verwende keine privaten Zugangsdaten. Für die Einbindung der Datenquelle empfehlen wir einen HPI Schul-Cloud spezifischen WebUntis Account zu erstellen.",
@@ -236,35 +234,6 @@
 	"pages.administration.remove.success": "Ausgewählte Nutzer gelöscht",
 	"pages.administration.sendMail.error": "Registrierungslink konnte nicht verschickt werden | Registrierungslinks konnten nicht verschickt werden",
 	"pages.administration.sendMail.success": "Registrierungslink erfolgreich verschickt | Registrierungslinks erfolgreich verschickt",
-	"pages.administration.students.consent.cancel.modal.confirm": "Trotzdem abbrechen",
-	"pages.administration.students.consent.cancel.modal.continue": "Registrierung weiter machen",
-	"pages.administration.students.consent.cancel.modal.info": "Achtung: Bist du sicher, dass du den Vorgang abbrechen möchtest? Vorgenommene Änderungen gehen dabei verloren.",
-	"pages.administration.students.consent.cancel.modal.title": "Bist du sicher?",
-	"pages.administration.students.consent.handout": "Handzettel",
-	"pages.administration.students.consent.info": "Du kannst im Namen deiner Schüler das Einverständnis zur {dataProtection} und zur {terms} der Schul-Cloud erklären, wenn du im Vorfeld das Einverständnis analog, per {handout}, eingeholt hast.",
-	"pages.administration.students.consent.print": "Liste mit Zugangsdaten drucken",
-	"pages.administration.students.consent.print.title": "Einverständnis erfolgreich erklärt",
-	"pages.administration.students.consent.steps.complete": "Daten ergänzen",
-	"pages.administration.students.consent.steps.complete.info": "Achte drauf, dass die Geburtsdaten aller Nutzer:innen vollständig sind und ergänze fehlende gegebenenfalls.",
-	"pages.administration.students.consent.steps.complete.inputerror": "Geburtsdatum fehlt",
-	"pages.administration.students.consent.steps.complete.next": "Daten übernehmen",
-	"pages.administration.students.consent.steps.complete.warn": "Nicht alle Nutzer:innen haben gültige Geburtsdaten. Bitte ergänze fehlende Geburtsdaten zunächst.",
-	"pages.administration.students.consent.steps.download": "Zugangsdaten herunterladen",
-	"pages.administration.students.consent.steps.download.explanation": "Das sind die Passwörter für die Erstanmeldung in der Schul-Cloud.\nBeim ersten Login muss ein neues Passwort gewählt werden. Schüler, die mindestens 14 Jahre alt sind, müssen bei ihrem ersten Login die Einwilligungserklärung zusätzlich selbst erklären.",
-	"pages.administration.students.consent.steps.download.info": "Speichere und drucke die Liste aus um sie anschließend den Nutzer:innen für ihre Erstanmeldung auszuhändigen.",
-	"pages.administration.students.consent.steps.download.next": "Zugangsdaten herunterladen",
-	"pages.administration.students.consent.steps.register": "Registrierung durchführen",
-	"pages.administration.students.consent.steps.register.analog-consent": "analoge Einwilligungserklärung",
-	"pages.administration.students.consent.steps.register.confirm": "Hiermit bestätige ich, dass ich die {analogConsent} auf dem Papierweg von den Eltern der oben genannten Schüler:innen unterschrieben erhalten habe.",
-	"pages.administration.students.consent.steps.register.confirm.warn": "Bitte bestätige, dass du die Einverständniserklärungen von Eltern und Schülern auf Papierweg erhalten und die Regeln zur Einverständniserklärung durchgelesen hast.",
-	"pages.administration.students.consent.steps.register.info": "Überprüfe, ob du das Einverständnis der aufgelisteten Schüler:innen analog per Handzettel erhalten hast, befor du die Registrierung im Namen der Nutzer:innen durchführst.",
-	"pages.administration.students.consent.steps.register.next": "Nutzer registrieren",
-	"pages.administration.students.consent.steps.register.print": "Du kannst dich nun in der HPI Schul-Cloud mit deinem Startpasswort einloggen. Gehe dazu auf {hostName} und logge dich dort mit den folgenden Zugansdaten ein:",
-	"pages.administration.students.consent.steps.register.success": "Nutzer erfolgreich registriert",
-	"pages.administration.students.consent.steps.success": "Glückwunsch, du hast die analoge Registrierung erfolgreich durchgeführt!",
-	"pages.administration.students.consent.steps.success.back": "Zurück zur Übersicht",
-	"pages.administration.students.consent.steps.success.image.alt": "Sicher Verbunden Grafik",
-	"pages.administration.students.consent.title": "Analoge Registrierung",
 	"pages.administration.students.fab.add": "Schüler:in anlegen",
 	"pages.administration.students.fab.import": "Schüler:innen importieren",
 	"pages.administration.students.index.remove.confirm.btnText": "Schüler löschen",
@@ -290,6 +259,35 @@
 	"pages.administration.students.new.error": "Schüler:in konnte nicht erfolgreich hinzugefügt werden. Möglicherweise existiert die E-Mail-Adresse bereits.",
 	"pages.administration.students.new.success": "Schüler:in erfolgreich angelegt!",
 	"pages.administration.students.new.title": "Schüler:in hinzufügen",
+	"pages.administration.students.consent.info": "Du kannst im Namen deiner Schüler das Einverständnis zur {dataProtection} und zur {terms} der Schul-Cloud erklären, wenn du im Vorfeld das Einverständnis analog, per {handout}, eingeholt hast.",
+	"pages.administration.students.consent.title": "Analoge Registrierung",
+	"pages.administration.students.consent.handout": "Handzettel",
+	"pages.administration.students.consent.steps.complete": "Daten ergänzen",
+	"pages.administration.students.consent.steps.complete.next": "Daten übernehmen",
+	"pages.administration.students.consent.steps.complete.info": "Achte drauf, dass die Geburtsdaten aller Nutzer:innen vollständig sind und ergänze fehlende gegebenenfalls.",
+	"pages.administration.students.consent.steps.complete.warn": "Nicht alle Nutzer:innen haben gültige Geburtsdaten. Bitte ergänze fehlende Geburtsdaten zunächst.",
+	"pages.administration.students.consent.steps.complete.inputerror": "Geburtsdatum fehlt",
+	"pages.administration.students.consent.steps.register": "Registrierung durchführen",
+	"pages.administration.students.consent.steps.register.info": "Überprüfe, ob du das Einverständnis der aufgelisteten Schüler:innen analog per Handzettel erhalten hast, befor du die Registrierung im Namen der Nutzer:innen durchführst.",
+	"pages.administration.students.consent.steps.register.confirm": "Hiermit bestätige ich, dass ich die {analogConsent} auf dem Papierweg von den Eltern der oben genannten Schüler:innen unterschrieben erhalten habe.",
+	"pages.administration.students.consent.steps.register.analog-consent": "analoge Einwilligungserklärung",
+	"pages.administration.students.consent.steps.register.confirm.warn": "Bitte bestätige, dass du die Einverständniserklärungen von Eltern und Schülern auf Papierweg erhalten und die Regeln zur Einverständniserklärung durchgelesen hast.",
+	"pages.administration.students.consent.steps.register.next": "Nutzer registrieren",
+	"pages.administration.students.consent.steps.register.success": "Nutzer erfolgreich registriert",
+	"pages.administration.students.consent.steps.register.print": "Du kannst dich nun in der HPI Schul-Cloud mit deinem Startpasswort einloggen. Gehe dazu auf {hostName} und logge dich dort mit den folgenden Zugansdaten ein:",
+	"pages.administration.students.consent.steps.download": "Zugangsdaten herunterladen",
+	"pages.administration.students.consent.steps.download.info": "Speichere und drucke die Liste aus um sie anschließend den Nutzer:innen für ihre Erstanmeldung auszuhändigen.",
+	"pages.administration.students.consent.steps.download.explanation": "Das sind die Passwörter für die Erstanmeldung in der Schul-Cloud.\nBeim ersten Login muss ein neues Passwort gewählt werden. Schüler, die mindestens 14 Jahre alt sind, müssen bei ihrem ersten Login die Einwilligungserklärung zusätzlich selbst erklären.",
+	"pages.administration.students.consent.steps.download.next": "Zugangsdaten herunterladen",
+	"pages.administration.students.consent.steps.success": "Glückwunsch, du hast die analoge Registrierung erfolgreich durchgeführt!",
+	"pages.administration.students.consent.steps.success.back": "Zurück zur Übersicht",
+	"pages.administration.students.consent.steps.success.image.alt": "Sicher Verbunden Grafik",
+	"pages.administration.students.consent.cancel.modal.title": "Bist du sicher?",
+	"pages.administration.students.consent.cancel.modal.info": "Achtung: Bist du sicher, dass du den Vorgang abbrechen möchtest? Vorgenommene Änderungen gehen dabei verloren.",
+	"pages.administration.students.consent.cancel.modal.continue": "Registrierung weiter machen",
+	"pages.administration.students.consent.cancel.modal.confirm": "Trotzdem abbrechen",
+	"pages.administration.students.consent.print": "Liste mit Zugangsdaten drucken",
+	"pages.administration.students.consent.print.title": "Einverständnis erfolgreich erklärt",
 	"pages.administration.teachers.fab.add": "Lehrer:in anlegen",
 	"pages.administration.teachers.fab.import": "Lehrer:innen importieren",
 	"pages.administration.teachers.index.remove.confirm.btnText": "Lehrer:in löschen",
@@ -318,10 +316,10 @@
 	"pages.content.empty_state.error.message": "<b>Vorschlag:</b><br><br>Achte darauf, dass alle Wörter richtig geschrieben sind. <br>Probiere es mit anderen Suchbegriffen.<br>Probiere es mit allgemeineren Suchbegriffen.<br>Probiere es mit weniger Suchbegriffen.<br>",
 	"pages.content.empty_state.error.subtitle": "Vorschlag:",
 	"pages.content.empty_state.error.title": "Ooops, keine Ergebnisse!",
+	"pages.content.index.search.placeholder": "Lernstore durchsuchen",
 	"pages.content.index.search_for": "Suche nach …",
 	"pages.content.index.search_resources": "Ressourcen",
 	"pages.content.index.search_results": "Suchergebnisse für",
-	"pages.content.index.search.placeholder": "Lernstore durchsuchen",
 	"pages.content.init_state.img_alt": "Initial state Image",
 	"pages.content.init_state.message": "Ab sofort findest du hier hochwertige Inhalte von unserem Partner WirLernenOnline und noch viel mehr.<br><br><b>Bald verfügbar:</b> <ul style='list-style-position: inside'> <li> Durch die Anbindung von <b>Antares Content Access</b> ermöglichen wir die leichte Einbindung tausender lizensierter Inhalte direkt in der HPI Schul-Cloud </li> \n <li>Exclusive <b>Inhalte für einzelne Bundesländer</b> durch die Erschließung der Inhalte verschiedener Landesmedienzentren<br> </li> </ul>",
 	"pages.content.init_state.title": "Willkommen im neuen Lern-Store!",
@@ -352,14 +350,14 @@
 	"pages.loginInstances.n21_link": "https://niedersachsen.cloud/login",
 	"pages.loginInstances.open_hpi_link": "https://open.schul-cloud.org/login",
 	"pages.loginInstances.thr_link": "https://schulcloud-thueringen.de",
-	"pages.mint-ec.article.footer.anbieter": "Inhalteanbieter: inhalte@schulcloud.org",
+	"pages.mint-ec.article.footer.anbieter": "Inhalteanbieter: inhalte@hpi-schul-cloud.de",
 	"pages.mint-ec.article.footer.datasecurity": "Datenschutz und Urheberrecht",
 	"pages.mint-ec.article.footer.datenschutz": "Datenschutzerklärung HPI",
-	"pages.mint-ec.article.footer.datenschutz-mail": "Datenschutz: datenschutz@schulcloud.org",
+	"pages.mint-ec.article.footer.datenschutz-mail": "Datenschutz: datenschutz@hpi-schul-cloud.de",
 	"pages.mint-ec.article.footer.datenschutzerklärung": "Datenschutzerklärung Muster Schulen",
 	"pages.mint-ec.article.footer.engagieren": "Mich im Projekt engagieren",
 	"pages.mint-ec.article.footer.impressum": "Impressum",
-	"pages.mint-ec.article.footer.info-mail": "Allgemein: info@schulcloud.org",
+	"pages.mint-ec.article.footer.info-mail": "Allgemein: info@hpi-schul-cloud.de",
 	"pages.mint-ec.article.footer.kollegium-informieren": "Meine Kollegium informieren",
 	"pages.mint-ec.article.footer.newsletter": "Newsletter abonnieren",
 	"pages.mint-ec.article.footer.nutzungsordnung": "Nutzungsordnung",
@@ -386,7 +384,7 @@
 	"utils.adminFilter.date.label.from": "Erstellungsdatum von",
 	"utils.adminFilter.date.label.until": "Erstellungsdatum bis",
 	"utils.adminFilter.date.title": "Erstellungsdatum",
-	"utils.adminFilter.placeholder.class": "Nach Klasse filtern…",
+	"utils.adminFilter.placeholder.class": "Nach Klass filtern...",
 	"utils.adminFilter.placeholder.complete.lastname": "Nach vollständigem Nachnamen filtern...",
 	"utils.adminFilter.placeholder.complete.name": "Nach vollständigem Vornamen filtern...",
 	"utils.adminFilter.placeholder.date.from": "Erstellt zwischen 02.02.2020",
