--- a/locale/en.json
+++ b/locale/en.json
@@ -105,6 +105,7 @@
 	"pages.administration.datasources.new.short_title": "",
 	"pages.administration.datasources.new.title": "",
 	"pages.administration.teachers.index.searchbar.placeholder": "Search",
+	"pages.administration.students.consent.table.empty": "The list is empty!",
 	"pages.administration.index.title": "Administration",
 	"pages.administration.printQr.error": "The registration links could not be generated",
 	"pages.content.empty_state.error.message": "<span><p>Check if all words are spelled correctly.<br>Try out other search queries.<br>Try out more common queries.<br>Try to use a shorter query.</p></span>",
