changed einladung verschickt to registrierung nicht begonnen

--- a/locale/de.json
+++ b/locale/de.json
@@ -283,7 +283,7 @@
 	"pages.administration.students.infobox.paragraph-2": "Wähle dazu einen oder mehrere Nutzer:innen aus, z.B. alle Schüler:innen einer Klasse. Führe dann die gewünschte Aktion durch.",
 	"pages.administration.students.infobox.paragraph-3": "Alternativ möglich: Wechsele in den Bearbeiten-Modus des Nutzerprofils und rufe den individuellen Registrierungslink ab, um ihn händisch auf dem Weg deiner Wahl zu versenden.",
 	"pages.administration.students.infobox.paragraph-4": "WICHTIG: Bei Schüler:innen unter 16 Jahren wird während des Registrierungsprozesses als erstes die Zustimmung eines Erziehungsberechtigten verlangt. Wir empfehlen in diesem Fall, die Registrierungslinks als QR-Zettel zu verteilen oder die Links einzeln abzurufen und an die Eltern zu versenden. Nach Zustimmung der Eltern erhalten die Schüler:innen ein Startpasswort und können den letzten Teil der Registrierung jederzeit selbstständig abschließen. Für die Nutzung der Schul-Cloud an Grundschulen sind die Papierformulare eine beliebte Alternative.",
-	"pages.administration.students.legend.icon.danger": "Einladungslink verschickt",
+	"pages.administration.students.legend.icon.danger": "Registrierung nicht begonnen",
 	"pages.administration.students.legend.icon.success": "Registrierung vollständig",
 	"pages.administration.students.legend.icon.warning": " Schülereinverständnis fehlt",
 	"pages.administration.students.new.checkbox.label": "Registrierungslink an Schüler:in senden",
@@ -375,7 +375,7 @@
 	"storybook.lang": "Ich bin jetzt auf Deutsch!",
 	"utils.adminFilter.class.title": "Klasse(n)",
 	"utils.adminFilter.consent": "Einverständniserklärung:",
-	"utils.adminFilter.consent.label.missing": "Einladungslink verschickt",
+	"utils.adminFilter.consent.label.missing": "Registrierung nicht begonnen",
 	"utils.adminFilter.consent.label.ok": "Registrierung vollständig",
 	"utils.adminFilter.consent.label.parentsAgreed": "Schülereinverständnis fehlt",
 	"utils.adminFilter.consent.missing": "nicht vorhanden",
