--- a/locale/en.json
+++ b/locale/en.json
@@ -283,9 +283,9 @@
 	"pages.administration.students.infobox.paragraph-2": "To do this, select one or more users, e.g. all students:inside a class. Then carry out the desired action.",
 	"pages.administration.students.infobox.paragraph-3": "Alternatively, you can switch to the Edit mode of the user profile and retrieve the individual registration link to send it manually by a method of your choice.",
 	"pages.administration.students.infobox.paragraph-4": "IMPORTANT: For students under 16 years of age, the first thing asked for during the registration process is the consent of a parent or guardian. In this case, we recommend the distribution of registration links as QR-sheets or retrieval of the links individually and sending them to the parents. After the parents have given their consent, the students receive a start password and can complete the last part of the registration on their own at any time. For use of the school cloud at primary schools, paper forms are a popular alternative.",
-	"pages.administration.students.legend.icon.danger": "Keine Registrierungen vorhanden",
-	"pages.administration.students.legend.icon.success": "Alle Registrierungen vorhanden",
-	"pages.administration.students.legend.icon.warning": "Parents have approved",
+	"pages.administration.students.legend.icon.danger": "User created",
+	"pages.administration.students.legend.icon.success": "Registration complete",
+	"pages.administration.students.legend.icon.warning": "Student have not approved",
 	"pages.administration.students.new.checkbox.label": "Send registration link to student",
 	"pages.administration.students.new.error": "Student could not be added successfully. The e-mail address may already exist.",
 	"pages.administration.students.new.success": "Student successfully created!",
@@ -375,9 +375,9 @@
 	"storybook.lang": "I'm in English now!",
 	"utils.adminFilter.class.title": "Class(es)",
 	"utils.adminFilter.consent": "Consent form:",
-	"utils.adminFilter.consent.label.missing": "No registrations available",
-	"utils.adminFilter.consent.label.ok": "All registrations available",
-	"utils.adminFilter.consent.label.parentsAgreed": "Parents have agreed",
+	"utils.adminFilter.consent.label.missing": "User created",
+	"utils.adminFilter.consent.label.ok": "Registration complete",
+	"utils.adminFilter.consent.label.parentsAgreed": "Student have not approved",
 	"utils.adminFilter.consent.missing": "not available",
 	"utils.adminFilter.consent.ok": "completely",
 	"utils.adminFilter.consent.parentsAgreed": "only parents have agreed",
