--- a/locale/en.json
+++ b/locale/en.json
@@ -285,7 +285,7 @@
 	"pages.administration.students.infobox.paragraph-4": "IMPORTANT: For students under 16 years of age, the first thing asked for during the registration process is the consent of a parent or guardian. In this case, we recommend the distribution of registration links as QR-sheets or retrieval of the links individually and sending them to the parents. After the parents have given their consent, the students receive a start password and can complete the last part of the registration on their own at any time. For use of the school cloud at primary schools, paper forms are a popular alternative.",
 	"pages.administration.students.legend.icon.danger": "User created",
 	"pages.administration.students.legend.icon.success": "Registration complete",
-	"pages.administration.students.legend.icon.warning": "Student have not approved",
+	"pages.administration.students.legend.icon.warning": "Student has not approved",
 	"pages.administration.students.new.checkbox.label": "Send registration link to student",
 	"pages.administration.students.new.error": "Student could not be added successfully. The e-mail address may already exist.",
 	"pages.administration.students.new.success": "Student successfully created!",
@@ -377,7 +377,7 @@
 	"utils.adminFilter.consent": "Consent form:",
 	"utils.adminFilter.consent.label.missing": "User created",
 	"utils.adminFilter.consent.label.ok": "Registration complete",
-	"utils.adminFilter.consent.label.parentsAgreed": "Student have not approved",
+	"utils.adminFilter.consent.label.parentsAgreed": "Student has not approved",
 	"utils.adminFilter.consent.missing": "not available",
 	"utils.adminFilter.consent.ok": "completely",
 	"utils.adminFilter.consent.parentsAgreed": "only parents have agreed",
