--- a/locale/de.json
+++ b/locale/de.json
@@ -377,7 +377,7 @@
 	"utils.adminFilter.consent": "Einverständniserklärung:",
 	"utils.adminFilter.consent.label.missing": "Nutzer:in angelegt",
 	"utils.adminFilter.consent.label.ok": "Registrierung abgeschlossen",
-	"utils.adminFilter.consent.label.parentsAgreed": "Schülereinverständnis fehlt",
+	"utils.adminFilter.consent.label.parentsAgreementMissing": "Schülereinverständnis fehlt",
 	"utils.adminFilter.consent.missing": "nicht vorhanden",
 	"utils.adminFilter.consent.ok": "vollständig",
 	"utils.adminFilter.consent.parentsAgreed": "nur Eltern haben zugestimmt",
