--- a/locale/de.json
+++ b/locale/de.json
@@ -299,7 +299,7 @@
 	"pages.administration.teachers.index.remove.confirm.message.all": "Bist du sicher, dass du alle Lehrer:innen löschen möchtest?",
 	"pages.administration.teachers.index.remove.confirm.message.many": "Bist du sicher, dass du alle Schüler bis auf {number} löschen möchtest?",
 	"pages.administration.teachers.index.remove.confirm.message.some": "Bist du sicher, dass du diesen Lehrer:in löschen möchtest? | Bist du sicher, dass du diese {number} Lehrer:in löschen möchtest?",
-	"pages.administration.teachers.index.searchbar.placeholder": "Suchen",
+	"pages.administration.teachers.index.searchbar.placeholder": "Schüler:innen durchsuchen nach",
 	"pages.administration.teachers.index.tableActions.consent": "Analoge Einverständniserklärung",
 	"pages.administration.teachers.index.tableActions.delete": "Löschen",
 	"pages.administration.teachers.index.tableActions.email": "Registrierungslinks per E-Mail versenden",
