--- a/locale/de.json
+++ b/locale/de.json
@@ -152,6 +152,26 @@
 	"error.load": "Fehler beim Laden der Daten.",
 	"error.proxy.action": "Seite neu laden",
 	"error.proxy.description": "Wir haben ein kleines Problem mit unserer Infrastruktur. Wir sind gleich wieder da.",
+	"global.sidebar.overview": "Übersicht",
+	"global.sidebar.teams": "Teams",
+	"global.sidebar.school": "Schule",
+	"global.sidebar.myMaterial": "Meine Materialien",
+	"global.sidebar.tasks": "Aufgaben",
+	"global.sidebar.tasks.assignedTasks": "Gestellte Aufgaben",
+	"global.sidebar.tasks.tasksDrafts": "Drafts",
+	"global.sidebar.files": "Meine Dateien",
+	"global.sidebar.filesPersonal": "persönliche Dateien",
+	"global.sidebar.filesShared": "geteilte Dateien",
+	"global.sidebar.calendar": "Termine",
+	"global.sidebar.lernstore": "Lern-Store",
+	"global.sidebar.addons": "Add-ons",
+	"global.sidebar.management": "Verwaltung",
+	"global.sidebar.student": "Schüler",
+	"global.sidebar.teacher": "Lehrer",
+	"global.sidebar.classes": "Klassen",
+	"global.sidebar.helpDesk": "Helpdesk",
+	"global.sidebar.tasks.archive": "Archiv",
+	"global.sidebar.administrationCourses": "Kurse",
 	"layouts.loggedoutFullWidth.blog": "Blog",
 	"layouts.loggedoutFullWidth.faq": "FAQ",
 	"layouts.loggedoutFullWidth.join": "Mitmachen",
