--- a/locale/en.json
+++ b/locale/en.json
@@ -151,6 +151,26 @@
 	"error.load": "Error while loading the data.",
 	"error.proxy.action": "Reload page",
 	"error.proxy.description": "We have a small problem with our infrastructure. We'll be right back.",
+	"global.sidebar.overview": "Dashboard",
+	"global.sidebar.teams": "Teams",
+	"global.sidebar.tasks": "Tasks",
+	"global.sidebar.tasks.assignedTasks": "Assigned tasks",
+	"global.sidebar.tasks.tasksDrafts": "Drafts",
+	"global.sidebar.files": "My Files",
+	"global.sidebar.myMaterial": "My materials",
+	"global.sidebar.tasks.archive": "Archive",
+	"global.sidebar.filesPersonal": "personal files",
+	"global.sidebar.filesShared": "shared files",
+	"global.sidebar.lernstore": "Lern-Store",
+	"global.sidebar.addons": "Add-ons",
+	"global.sidebar.student": "Student",
+	"global.sidebar.teacher": "Teacher",
+	"global.sidebar.classes": "Classes",
+	"global.sidebar.helpDesk": "Help desk",
+	"global.sidebar.management": "Management",
+	"global.sidebar.calendar": "calendar",
+	"global.sidebar.school": "School",
+	"global.sidebar.Courses": "Courses",
 	"layouts.loggedoutFullWidth.blog": "Blog",
 	"layouts.loggedoutFullWidth.faq": "FAQ",
 	"layouts.loggedoutFullWidth.join": "Participate",
