--- a/locale/de.json
+++ b/locale/de.json
@@ -288,6 +288,10 @@
 	"pages.administration.students.infobox.paragraph-2": "Wähle dazu einen oder mehrere Nutzer:innen aus, z.B. alle Schüler:innen einer Klasse. Führe dann die gewünschte Aktion durch.",
 	"pages.administration.students.infobox.paragraph-3": "Alternativ möglich: Wechsele in den Bearbeiten-Modus des Nutzerprofils und rufe den individuellen Registrierungslink ab, um ihn händisch auf dem Weg deiner Wahl zu versenden.",
 	"pages.administration.students.infobox.paragraph-4": "WICHTIG: Bei Schüler:innen unter 16 Jahren wird während des Registrierungsprozesses als erstes die Zustimmung eines Erziehungsberechtigten verlangt. Wir empfehlen in diesem Fall, die Registrierungslinks als QR-Zettel zu verteilen oder die Links einzeln abzurufen und an die Eltern zu versenden. Nach Zustimmung der Eltern erhalten die Schüler:innen ein Startpasswort und können den letzten Teil der Registrierung jederzeit selbstständig abschließen. Für die Nutzung der Schul-Cloud an Grundschulen sind die Papierformulare eine beliebte Alternative.",
+	"pages.administration.students.infobox.LDAP.paragraph-1": "Deine Schule bezieht sämtliche Login-Daten aus einem Quellsystem (LDAP o.ä.). Die Nutzer:innen können sich mit dem Usernamen und Passwort aus dem Quellsystem in der Schul-Cloud einloggen.",
+	"pages.administration.students.infobox.LDAP.paragraph-2": "Beim ersten Login wird um die Einverständniserklärung gebeten, um die Registrierung abzuschließen.",
+	"pages.administration.students.infobox.LDAP.paragraph-3": "WICHTIG: Bei Schüler:innen unter 16 Jahren wird während des Registrierungsprozess die Zustimmung eines Erziehungsberechtigten verlangt. Bitte sorge in diesem Fall dafür, dass der erste Login im Beisein eines Elternteils stattfindet, in der Regel zu Hause.",
+	"pages.administration.students.infobox.LDAP.paragraph-4": "Finde weitere Informationen zur Registrierung im Hilfebereich",
 	"pages.administration.students.legend.icon.danger": "Nutzer:in angelegt",
 	"pages.administration.students.legend.icon.success": "Registrierung abgeschlossen",
 	"pages.administration.students.legend.icon.warning": " Schülereinverständnis fehlt",
