--- a/locale/de.json
+++ b/locale/de.json
@@ -65,7 +65,7 @@
 	"components.molecules.ContentCard.report.body": "Melden des Inhaltes mit der ID",
 	"components.molecules.ContentCard.report.email": "inhalte@hpi-schul-cloud.de",
 	"components.molecules.ContentCard.report.subject": "Liebes Team, hiermit möchte ich den im Betreff genannten Inhalt melden, da: [hier bitte Ihre Gründe]",
-	"components.molecules.ContentCardMenu.action.copy": "Kopieren nach …",
+	"components.molecules.ContentCardMenu.action.copy": "Kopieren nach …",
 	"components.molecules.ContentCardMenu.action.delete": "Löschen",
 	"components.molecules.ContentCardMenu.action.report": "Melden",
 	"components.molecules.ContentCardMenu.action.share": "Teilen",
@@ -75,7 +75,7 @@
 	"components.molecules.MintEcFooter.chapters": "Kapitelübersicht",
 	"components.molecules.TextEditor.noLocalFiles": "Lokale Dateien werden aktuell nicht unterstützt.",
 	"components.molecules.adminfooterlegend.title": "Legende",
-	"components.molecules.admintablelegend.externalSync": "Einige oder alle Nutzer:innendaten deiner Schule werden aus einer externen Quelle (LDAP, IDM, Schulportal o. ä.) synchronisiert. Die Bearbeitung dieser Nutzer:innen-Stammdaten ist deshalb nur im Quellsystem möglich, nicht in der Schul-Cloud. Das Anlegen neuer Schüler:innen oder Lehrkräfte sind ebenfalls nur im Quellsystem möglich. Finde weitere Informationen im",
+	"components.molecules.admintablelegend.externalSync": "Einige oder alle Nutzer:innendaten deiner Schule werden aus einer externen Quelle (LDAP, IDM, Schulportal o. ä.) synchronisiert. Die Bearbeitung dieser Nutzer:innen-Stammdaten ist deshalb nur im Quellsystem möglich, nicht in der Schul-Cloud. Das Anlegen neuer Schüler:innen oder Lehrkräfte sind ebenfalls nur im Quellsystem möglich. Finde weitere Informationen im",
 	"components.molecules.admintablelegend.help": "Hilfebereich",
 	"components.molecules.admintablelegend.hint": "Mit allen Änderungen und Einstellungen im Verwaltungsbereich bestätigen Sie, dass Sie weisungsberechtigter Schul-Administrator sind und befugt sind, Anpassungen an der Schule in der HPI Schul-Cloud vorzunehmen. Ihr Klick gilt insofern als Weisung der Schule gegenüber dem HPI.",
 	"components.organisms.AutoLogoutWarning.confirm": "Sitzung verlängern",
@@ -115,7 +115,7 @@
 	"components.organisms.FormNews.cancel.confirm.cancel": "Weiter arbeiten",
 	"components.organisms.FormNews.cancel.confirm.confirm": "Änderungen verwerfen",
 	"components.organisms.FormNews.cancel.confirm.message": "Wenn du die Bearbeitung abbrichst, gehen alle ungesicherten Änderungen verloren.",
-	"components.organisms.FormNews.editor.placeholder": "Es war einmal …",
+	"components.organisms.FormNews.editor.placeholder": "Es war einmal …",
 	"components.organisms.FormNews.errors.create": "Fehler beim Erstellen.",
 	"components.organisms.FormNews.errors.missing_content": "Deinem Artikel fehlt es an Inhalt. ;)",
 	"components.organisms.FormNews.errors.missing_title": "Jeder Artikel braucht einen Titel.",
@@ -342,7 +342,7 @@
 	"pages.content.empty_state.error.subtitle": "Vorschlag:",
 	"pages.content.empty_state.error.title": "Ooops, keine Ergebnisse!",
 	"pages.content.index.search.placeholder": "Lernstore durchsuchen",
-	"pages.content.index.search_for": "Suche nach …",
+	"pages.content.index.search_for": "Suche nach …",
 	"pages.content.index.search_resources": "Ressourcen",
 	"pages.content.index.search_results": "Suchergebnisse für",
 	"pages.content.init_state.img_alt": "Initial state Image",
@@ -396,7 +396,7 @@
 	"pages.news.title": "Neuigkeiten",
 	"pages.termsofuse.title": "Nutzungsordnung und Datenschutzerklärung",
 	"storybook.lang": "Ich bin jetzt auf Deutsch!",
-	"utils.adminFilter.class.title": "Klasse(n)",
+	utils.adminFilter.class.title": "Klasse(n)",
 	"utils.adminFilter.consent": "Einverständniserklärung:",
 	"utils.adminFilter.consent.label.missing": "Nutzer:in angelegt",
 	"utils.adminFilter.consent.label.ok": "Registrierung abgeschlossen",
