--- a/locale/de.json
+++ b/locale/de.json
@@ -60,6 +60,7 @@
 	"components.legacy.footer.team": "Team",
 	"components.legacy.footer.terms": "Nutzungsordnung",
 	"components.legacy.footer.termsofuse": "Nutzungsordnung und Datenschutzerklärung",
+	"components.base.BaseIcon.error": "error loading icon {this.icon} from {this.source}. It might be not available or you are using the legacy Edge browser.",
 	"components.molecules.AccountCard.action.edit": "ändern",
 	"components.molecules.AddContentModal": "Hinzufügen zu",
 	"components.molecules.ContentCard.report.body": "Melden des Inhaltes mit der ID",
