--- a/locale/en.json
+++ b/locale/en.json
@@ -151,10 +151,10 @@
 	"error.load": "Error while loading the data.",
 	"error.proxy.action": "Reload page",
 	"error.proxy.description": "We have a small problem with our infrastructure. We'll be right back.",
-	"global.sidebar.Courses": "Courses",
 	"global.sidebar.addons": "Add-ons",
 	"global.sidebar.calendar": "calendar",
 	"global.sidebar.classes": "Classes",
+	"global.sidebar.courses": "Courses",
 	"global.sidebar.files": "My Files",
 	"global.sidebar.filesPersonal": "personal files",
 	"global.sidebar.filesShared": "shared files",
@@ -171,6 +171,7 @@
 	"global.sidebar.tasks.tasksDrafts": "Drafts",
 	"global.sidebar.teacher": "Teacher",
 	"global.sidebar.teams": "Teams",
+	"global.topbar.settings": "Settings",
 	"layouts.loggedoutFullWidth.blog": "Blog",
 	"layouts.loggedoutFullWidth.faq": "FAQ",
 	"layouts.loggedoutFullWidth.join": "Participate",
