changed filter notification

--- a/locale/de.json
+++ b/locale/de.json
@@ -409,11 +409,12 @@
 	"storybook.lang": "Ich bin jetzt auf Deutsch!",
 	"utils.adminFilter.class.title": "Klasse(n)",
 	"utils.adminFilter.consent": "Einverständniserklärung:",
+	"utils.adminFilter.register.consent": "Registrierungen: ",
 	"utils.adminFilter.consent.label.missing": "Nutzer:in angelegt",
 	"utils.adminFilter.consent.label.ok": "Registrierung abgeschlossen",
 	"utils.adminFilter.consent.label.parentsAgreementMissing": "Schülereinverständnis fehlt",
 	"utils.adminFilter.consent.missing": "nicht vorhanden",
-	"utils.adminFilter.consent.ok": "vollständig",
+	"utils.adminFilter.consent.ok": "abgeschlossen",
 	"utils.adminFilter.consent.parentsAgreed": "nur Eltern haben zugestimmt",
 	"utils.adminFilter.consent.title": "Registrierungen",
 	"utils.adminFilter.date.created": "Erstellt zwischen",
