--- a/locale/de.json
+++ b/locale/de.json
@@ -28,6 +28,7 @@
 	"common.labels.password.new": "Neues Passwort",
 	"common.labels.register": "Registrieren",
 	"common.labels.registration": "Registrierung",
+	"common.labels.filter.registration": "Filter: ",
 	"common.labels.repeat": "Wiederholung",
 	"common.labels.repeat.email": "Neue E-Mail",
 	"common.labels.room": "Raum",
@@ -421,6 +422,6 @@
 	"utils.adminFilter.placeholder.class": "Nach Klasse filtern…",
 	"utils.adminFilter.placeholder.complete.lastname": "Nach vollständigem Nachnamen filtern...",
 	"utils.adminFilter.placeholder.complete.name": "Nach vollständigem Vornamen filtern...",
-	"utils.adminFilter.placeholder.date.from": "Erstellt zwischen 02.02.2020",
-	"utils.adminFilter.placeholder.date.until": "... und 03.03.2020"
+	"utils.adminFilter.placeholder.date.from": "Erstellt zwischen 02/02/2020",
+	"utils.adminFilter.placeholder.date.until": "... und 03/03/2020"
 }
